--- a/demo.html
+++ b/demo.html
@@ -17,17 +17,17 @@
 
   <body unresolved>
     <div id="holder">
-      <ui-stat-value title="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
+      <ui-stat-value label="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
       </ui-stat-value>
     </div>
     
     <div id="holder">
-      <ui-stat-value title="Tacos Eaten Past 7 Days" value="95" previous="100">
+      <ui-stat-value label="Tacos Eaten Past 7 Days" value="95" previous="100">
       </ui-stat-value>
     </div>
 
     <div id="holder">
-      <ui-stat-value title="Widgets Sold Past 30 Days" value="45" values="10, 20, 15, 30, 45">
+      <ui-stat-value label="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
       </ui-stat-value>
     </div>
 
