--- a/demo.html
+++ b/demo.html
@@ -8,34 +8,21 @@
     <link rel="import" href="node_modules/polymer/polymer.html">
     <link rel="import" href="src/ui-stat-value.html">
     <link rel="stylesheet" href="node_modules/ui-font-awesome/font-awesome.less">
-    <style>
-      body {
-        font-family: "Helvetica Neue", "Helvetica", Arial;
-      }
-    </style>
   </head>
 
   <body unresolved>
-    <div id="holder">
       <ui-stat-value label="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
       </ui-stat-value>
-    </div>
     
-    <div id="holder">
       <ui-stat-value label="Tacos Eaten Past 7 Days" value="95" previous="100">
       </ui-stat-value>
-    </div>
 
-    <div id="holder">
       <ui-stat-value label="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
       </ui-stat-value>
-    </div>
-
-    <script>
-      document.addEventListener('polymer-ready', function() {
-        //poke your element here
-      });
-    </script>
+    
+      <ui-stat-value label="CM Applications" url="https://query.glgroup.com/councilApplicant/getStats.mustache"
+       property="applied">
+      </ui-stat-value>
   </body>
 
 </html>
