--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,11 @@
     <link rel="import" href="node_modules/polymer/polymer.html">
     <link rel="import" href="src/ui-stat-value.html">
     <link rel="stylesheet" href="node_modules/ui-font-awesome/font-awesome.less">
+    <style>
+    body {
+      font-family: "Helvetica Neue", "Helvetica", Arial;
+    }
+    </style>
   </head>
 
   <body unresolved>
