changed url to src

--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
       <ui-stat-value label="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
       </ui-stat-value>
     
-      <ui-stat-value label="CM Applications" url="https://query.glgroup.com/councilApplicant/getStats.mustache"
+      <ui-stat-value label="CM Applications" src="https://query.glgroup.com/councilApplicant/getStats.mustache"
        property="applied">
       </ui-stat-value>
   </body>
