--- a/src/ui-stat-value.html
+++ b/src/ui-stat-value.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stat-value" attributes="value values label previous units url property maxValues">
+<polymer-element name="ui-stat-value" attributes="value values label previous units src property maxValues">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
