changed label to title

--- a/src/ui-stat-value.html
+++ b/src/ui-stat-value.html
@@ -1,12 +1,12 @@
-<polymer-element name="ui-stat-value" attributes="value values label previous units src property maxValues">
+<polymer-element name="ui-stat-value" attributes="value values title previous units src property maxValues">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
     <link rel="stylesheet" type="text/css" href="./ui-stat-value.less">
 
     <section id="stat">
-      <div class="label">
-        {{label}}
+      <div class="title">
+        {{title}}
       </div>
       
       <div class="loader {{ {hidden: !loading} | tokenList }}">
