--- a/demo.html
+++ b/demo.html
@@ -16,16 +16,16 @@
   </head>
 
   <body unresolved>
-      <ui-stat-value label="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
+      <ui-stat-value title="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
       </ui-stat-value>
     
-      <ui-stat-value label="Tacos Eaten Past 7 Days" value="95" previous="100">
+      <ui-stat-value title="Tacos Eaten Past 7 Days" value="95" previous="100">
       </ui-stat-value>
 
-      <ui-stat-value label="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
+      <ui-stat-value title="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
       </ui-stat-value>
     
-      <ui-stat-value label="CM Applications" src="https://query.glgroup.com/councilApplicant/getStats.mustache"
+      <ui-stat-value title="CM Applications" src="https://query.glgroup.com/councilApplicant/getStats.mustache"
        property="applied">
       </ui-stat-value>
   </body>
