--- a/src/ui-stats-number.html
+++ b/src/ui-stats-number.html
@@ -1,8 +1,8 @@
-<polymer-element name="ui-stat-value" attributes="value values title previous units src property maxValues">
+<polymer-element name="ui-stats-number" attributes="value values title previous units src property maxValues">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
-    <link rel="stylesheet" type="text/css" href="./ui-stat-value.less">
+    <link rel="stylesheet" type="text/css" href="./ui-stats-number.less">
 
     <section id="stat">
       <div class="title">
@@ -35,6 +35,6 @@
     </section>
   </template>
 
-  <script src="./ui-stat-value.litcoffee"></script>
+  <script src="./ui-stats-number.litcoffee"></script>
 </polymer-element>
     
