renamed title to name

--- a/demo.html
+++ b/demo.html
@@ -16,16 +16,16 @@
   </head>
 
   <body unresolved>
-      <ui-stats-number title="Money Saved Past 7 Days" units="$" value="101.25" previous="98">
+      <ui-stats-number name="Money Prefix" units="$" value="101.25" previous="98">
       </ui-stats-number>
     
-      <ui-stats-number title="Tacos Eaten Past 7 Days" value="95" previous="100">
+      <ui-stats-number name="Value and Previous Value" value="95" previous="100">
       </ui-stats-number>
 
-      <ui-stats-number title="Widgets Sold Past 30 Days" value="45" values="[10, 20, 15, 30, 45]">
+      <ui-stats-number name="Static Array of Values" values="[10, 20, 15, 30, 45]">
       </ui-stats-number>
     
-      <ui-stats-number title="CM Applications" src="https://query.glgroup.com/councilApplicant/getStats.mustache"
+      <ui-stats-number name="CM Applications" src="https://query.glgroup.com/councilApplicant/getStats.mustache"
        property="applied">
       </ui-stats-number>
   </body>
