moved up index file to root

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,8 @@
     <title>ui-stats</title>
     <script src="http://localhost:35729/livereload.js"></script>
     <link rel="import" href="node_modules/polymer/polymer.html">
-    <link rel="import" href="src/ui-stats.html">
+    <link rel="import" href="ui-stats.html">
+
     <link rel="stylesheet" href="node_modules/ui-font-awesome/font-awesome.less">
     <style>
     body {
