docs in progress

--- a/src/ui-stats-number.html
+++ b/src/ui-stats-number.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stats-number" attributes="value values name previous units src property maxValues">
+<polymer-element name="ui-stats-number" attributes="value values name previous units src property maxValues mode">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
