--- a/src/ui-stats-number.html
+++ b/src/ui-stats-number.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stats-number" attributes="value values name units src property maxValues function smooth absolute">
+<polymer-element name="ui-stats-number" attributes="value data name units src property limit function smooth absolute">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
