--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,7 @@
     <style>
     body {
       font-family: "Helvetica Neue", "Helvetica", Arial;
+      background-color: antiquewhite;
     }
     </style>
   </head>
@@ -24,7 +25,7 @@
     <ui-stats-number name="Value and Previous" data="[95, 100]">
     </ui-stats-number>
 
-    <ui-stats-number name="Value and Previous (abs)" data="[95, 100]" absolute="true">
+    <ui-stats-number name="Value and Previous (absolute)" data="[200, 175]" absolute="true">
     </ui-stats-number>
 
     <ui-stats-number name="History - Not Smooth" data="[10, 20, 15, 30, 45, 12]" function="last" smooth="false">
