--- a/src/ui-stats-chart.html
+++ b/src/ui-stats-chart.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stats-chart" attributes="data src limit name smooth type cols pattern">
+<polymer-element name="ui-stats-chart" attributes="data src limit name smooth type cols">
   <link rel="import" href="../bower_components/google-chart/google-chart.html">
 
   <template>
