--- a/demo.html
+++ b/demo.html
@@ -105,6 +105,11 @@
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
       cols="[{'id':'date', 'type':'date'}, {'id':'applied'}, {'id':'accepted'}, {'id':'paid'}]">
     </ui-stats-chart>
+
+    <ui-stats-chart name="Epiquery: Multiple Y Columns (area, by week)" limit="30" groupBy="week"
+      src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
+      cols="[{'id':'date', 'type':'date'}, {'id':'applied'}, {'id':'accepted'}, {'id':'paid'}]">
+    </ui-stats-chart>
      
     <ui-stats-chart name="Pie from Object Array" type="pie"
       data="[ {'method':'boat', 'count':3}, {'method':'airplane', 'count':11}, {'method':'car', 'count':2}, {'method':'truck', 'count':5} ]"
