moved src up to root

--- a/ui-stats.html
+++ b/ui-stats.html
@@ -1,2 +1,2 @@
-<link rel="import" href="src/ui-stats-number.html">
-<link rel="import" href="src/ui-stats-chart.html">
+<link rel="import" href="ui-stats-number.html">
+<link rel="import" href="ui-stats-chart.html">
