--- a/ui-stats-number.html
+++ b/ui-stats-number.html
@@ -1,5 +1,5 @@
 <polymer-element name="ui-stats-number" attributes="value data name units src property limit function smooth absolute">
-  <link rel="import" href="../bower_components/google-chart/google-chart.html">
+  <link rel="import" href="bower_components/google-chart/google-chart.html">
 
   <template>
     <link rel="stylesheet" type="text/css" href="./ui-stats-number.less">
