--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
   <head>
     <title>ui-stats</title>
     <link rel="import" href="node_modules/polymer/polymer.html">
-    <link rel="import" href="ui-stats.html">
+    <link rel="import" href="src/ui-stats.html">
     <style>
     body {
       font-family: "Helvetica Neue", "Helvetica", Arial;
