hacking more stuff to not load polymer

--- a/google-apis/google-jsapi.html
+++ b/google-apis/google-jsapi.html
@@ -7,9 +7,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!-- <link rel="import" href="../polymer/polymer.html">
+<!-- <link rel="import" href="../polymer/polymer.html"> -->
 <link rel="import" href="../core-shared-lib/core-shared-lib.html">
- -->
 <!--
 Dynamically loads the legacy Google JavaScript API Loader (https://developers.google.com/loader/),
 firing the `api-load` event when ready.
