--- a/google-chart/google-chart.html
+++ b/google-chart/google-chart.html
@@ -1,6 +1,6 @@
 <!-- <link rel="import" href="../polymer/polymer.html"> -->
-<link rel="import" href="../core-ajax/core-ajax.html">
-<link rel="import" href="../google-apis/google-jsapi.html">
+<!-- <link rel="import" href="../core-ajax/core-ajax.html">
+ --><link rel="import" href="../google-apis/google-jsapi.html">
 
 <!--
 `google-chart` encapsulates Google Charts as a web component, allowing you to easily visualize
