timeline (no formatting)

--- a/src/ui-stats.html
+++ b/src/ui-stats.html
@@ -1,2 +1,3 @@
+<link rel="import" href="ui-stats-timeline.html">
 <link rel="import" href="ui-stats-number.html">
 <link rel="import" href="ui-stats-chart.html">
