--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -1,4 +1,4 @@
-<polymer-element name="ui-stats-timeline" attributes="data src limit label groupBy groupByFunction function units dateProperty valueProperty datePattern">
+<polymer-element name="ui-stats-timeline" attributes="data src limit label groupBy groupByFunction function units dateProperty valueProperty datePattern smooth">
   <link rel="import" href="../google-chart/google-chart.html">
 
   <template>
