hide Value label

--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -14,7 +14,7 @@
       <div class="graph">
         <div class="graph-container">
           <google-chart id="chart" type="line"
-            cols='[{"label":"Date", "type":"date"}, {"label":"Value", "type":"number"}]'
+            cols='[{"label":"Date", "type":"date"}, {"type":"number"}]'
           >
           </google-chart>
       </div>
