--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
       valueProperty="accept_rate">
     </ui-stats-timeline>
     
-    <ui-stats-timeline label="Peak CM Acceptance Percentage" units="%" groupBy="week" function="max"
+    <ui-stats-timeline label="Peak CM Acceptance Percentage" units="%" groupBy="week" function="max" smooth="false"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache"
       valueProperty="accept_rate">
     </ui-stats-timeline>
