--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -8,7 +8,8 @@
 
       <div class="data">
         <h2>{{label}}</h2>
-        <span class="number">{{value}}{{units}}</span>
+        <span class="number" hidden?="{{loading}}">{{value}}{{units}}</span>
+        <span class="loading" hidden?="{{!loading}}">Loading...</span>
       </div>
 
       <div class="graph">
