--- a/demo.html
+++ b/demo.html
@@ -47,6 +47,11 @@
       src="https://query.glgroup.com/councilApplicant/getStats.mustache"
       valueProperty="applied">
     </ui-stats-timeline>
+
+    <ui-stats-timeline label="Static Object Array"
+      data="[ {'date':'2015-01-01', 'count':3}, {'date':'2015-02-01','count':11}, {'date':'2015-03-01','count':2}, {'date':'2015-04-01','count':5} ]"
+      valueProperty="count" function="last">
+    </ui-stats-timeline>
     
     <h1>Number Tiles</h1>
 
