--- a/demo.html
+++ b/demo.html
@@ -28,11 +28,16 @@
       valueProperty="accept_rate" groupByFunction="average">
     </ui-stats-timeline>
     
-    <ui-stats-timeline label="Mean Response time" units="ms" limit="30" groupByFunction="sum"
+    <ui-stats-timeline label="Mean Response time" units="ms" limit="30"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
       valueProperty="paid">
     </ui-stats-timeline>
 
+    <ui-stats-timeline label="Multi-Series Data: Accepted vs Paid"  limit="30" function="sum"
+      src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
+      valueProperties="['paid', 'accepted']">
+    </ui-stats-timeline>
+    
     <ui-stats-timeline label="Mean Response time" units="ms" limit="30" groupByFunction="sum"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area" function="none"
       valueProperty="paid">
