--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,7 @@
       valueProperty="paid">
     </ui-stats-timeline>
 
-    <ui-stats-timeline label="Multi-Series Data: Accepted vs Paid"  limit="365" function="sum" groupBy="week"
+    <ui-stats-timeline label="Multi-Series Data: Accepted and Paid"  limit="365" function="sum" groupBy="week"
       src="https://query.glgroup.com/councilApplicant/getStats.mustache" type="area"
       valueProperties="['paid', 'accepted']">
     </ui-stats-timeline>
