fix issue using default column names

--- a/demo.html
+++ b/demo.html
@@ -63,6 +63,11 @@
       valueProperty="count" function="last">
     </ui-stats-timeline>
     
+    <ui-stats-timeline label="Static Object Array Defaults"
+      data="[ {'date':'2015-01-01', 'value':3}, {'date':'2015-02-01','value':11}, {'date':'2015-03-01','value':2}, {'date':'2015-04-01','value':5} ]"
+      function="last">
+    </ui-stats-timeline>
+    
     <h1>Number Tiles</h1>
 
     <ui-stats-number name="Single Value with Prefix" units="$" value="101.25">
