parse to float on grouping

--- a/demo.html
+++ b/demo.html
@@ -67,6 +67,11 @@
       data="[ {'date':'2015-01-01', 'count':'3'}, {'date':'2015-02-01','count':'11'}, {'date':'2015-03-01','count':'2'}, {'date':'2015-04-01','count':'5'} ]"
       valueProperty="count" function="last">
     </ui-stats-timeline>
+
+    <ui-stats-timeline label="Static Object Array NumStrings (Week)" groupBy="week"
+      data="[ {'date':'2015-01-01', 'count':'3'}, {'date':'2015-02-01','count':'11'}, {'date':'2015-03-01','count':'2'}, {'date':'2015-04-01','count':'5'} ]"
+      valueProperty="count" function="last">
+    </ui-stats-timeline>
     
     <ui-stats-timeline label="Static Object Array Defaults"
       data="[ {'date':'2015-01-01', 'value':3}, {'date':'2015-02-01','value':11}, {'date':'2015-03-01','value':2}, {'date':'2015-04-01','value':5} ]"
