--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -1,6 +1,6 @@
 <polymer-element name="ui-stats-timeline" attributes="data src limit label
    groupBy groupByFunction reduction units dateProperty valueProperty datePattern
-   smooth type valueProperties method trendline smoothingFunction smoothingWindow
+   smooth type valueProperties method trendline transform
    function
    ">
   <link rel="import" href="../google-chart/google-chart.html">
