--- a/src/ui-stats-timeline.html
+++ b/src/ui-stats-timeline.html
@@ -1,6 +1,6 @@
 <polymer-element name="ui-stats-timeline" attributes="data src limit label
    groupBy groupByFunction reduction units dateProperty valueProperty datePattern
-   smooth type valueProperties method trendline transform
+   smooth type valueProperties method trendline transform absoluteChange showChange
    function
    ">
   <link rel="import" href="../google-chart/google-chart.html">
@@ -12,8 +12,18 @@
     <div class="timeline">
 
       <div class="data" hidden?="{{reduction == 'none'}}">
-        <span class="number" hidden?="{{loading}}">{{value}}{{units}}</span>
-        <span class="loading" hidden?="{{!loading}}">Loading...</span>
+        <div class="loading" hidden?="{{!loading}}">Loading...</div>
+        <div class="number" hidden?="{{loading}}">
+          <template if="{{units == '%'}}">{{value | percentage}}</template>
+          <template if="{{units != '%'}}">{{value | decimalNumber}}{{units}}</template>
+        </div>
+        <div class="{{ {change: true, increase: change > 0, decrease: change < 0} | tokenList }}" hidden?="{{loading || change == 0 || !showChange}}">
+          <template if="{{change > 0}}">▲</template>
+          <template if="{{change < 0}}">▼</template>
+          <template if="{{absoluteChange}}">{{change | absv | decimalNumber }}{{units}}</template>
+          <template if="{{!absoluteChange}}">{{change | absv | percentage }}</template>
+          {{groupBy}} over {{groupBy}}
+        </div>
       </div>
 
       <div class="graph">
